p2/confs/app3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment
  labels:
    app: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      nodeSelector:
        kubernetes.io/hostname: edetohsw
      containers:
        - name: app3
          image: nginxdemos/hello
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app3-svc
  labels:
    app: app3
spec:
  type: ClusterIP
  selector:
    app: app3
  ports:
    - port: 80
      targetPort: 80
